# Monado

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  GESTURE_FRAME_FEEDBACK.md  README.md  fake-hotplug.patch
.github/workflows/: portable-build.yml
.gitlab-ci/templates/: .gitlab-ci.yml.jinja
cmake/: MonadoSetOptions.cmake  SPIR-V.cmake
doc/changes/drivers/: mr.2607.md
doc/changes/state_trackers/: mr.2840.md
doc/changes/tracking/: mr.2838.md
scripts/: generate_oxr_ext_support.py  mapping.imp
src/xrt/auxiliary/: CMakeLists.txt
src/xrt/auxiliary/bindings/: bindings.json
src/xrt/auxiliary/htc/: htc_config.cpp
src/xrt/auxiliary/math/: m_api.h  m_optics.c
src/xrt/auxiliary/onnx/: CMakeLists.txt  onnx_wrapper.cpp  onnx_wrapper.hpp
src/xrt/auxiliary/tracking/: t_dead_reckoning.c  t_tracker_slam.cpp
src/xrt/auxiliary/util/: CMakeLists.txt  u_android.c  u_android.h  u_extension_list.cpp  u_gesture.c  u_gesture.h  u_gesture_feedback.c  u_gesture_feedback.h  u_handles.c  u_linux.c  u_pretty_print.c  u_pretty_print.h  u_screenshot.c  u_screenshot.h  u_system_helpers.c  u_thread_priority.c  u_thread_priority.h
src/xrt/auxiliary/vive/: vive_config.c
src/xrt/auxiliary/vk/: CMakeLists.txt  vk_bundle_init.c  vk_compositor_flags.c  vk_compositor_flags.h  vk_extensions_helpers.c  vk_extensions_helpers.h  vk_format.c  vk_format.h  vk_generate_inc_files.py  vk_helpers.c  (+5 more)
src/xrt/base/: CMakeLists.txt  b_hand_tracker.cpp  b_hand_tracker.hpp  b_system_devices.c  b_timing_source.c  b_timing_source.h
src/xrt/drivers/: CMakeLists.txt
(+200 files in other folders)
